--- a/ToolsConsole/Tools/Tools.csproj
+++ b/ToolsConsole/Tools/Tools.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Common.cs" />
+    <Compile Include="Common\VerifyImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StrClass.cs" />
     <Compile Include="StringExtension.cs" />
