--- a/ToolsConsole/Tools/Tools.csproj
+++ b/ToolsConsole/Tools/Tools.csproj
@@ -32,7 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -45,8 +50,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Common.cs" />
+    <Compile Include="Common\ImageTools.cs" />
+    <Compile Include="Common\JsonHelper.cs" />
+    <Compile Include="Request.cs" />
+    <Compile Include="StringCheck.cs" />
     <Compile Include="Common\VerifyImage.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryString.cs" />
     <Compile Include="StrClass.cs" />
     <Compile Include="StringExtension.cs" />
   </ItemGroup>
