--- a/ORM/CreateModelFile/App.config
+++ b/ORM/CreateModelFile/App.config
@@ -20,6 +20,8 @@
     <add key="path" value="C:\Users\Administrator\Desktop\Model" />
     <!--默认命名空间-->
     <add key="nameSpace" value="Models" />
+    
+    <add key="LogLevel" value="3" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
