--- a/ToolsConsole/App.config
+++ b/ToolsConsole/App.config
@@ -1,6 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+
+  <connectionStrings configSource="DataBase.Config" />
+  <appSettings configSource="App1.Config"/>
+  <!--<connectionStrings>
+    <add name="OA" connectionString="Data Source=192.168.18.247,50886;User ID=sa;Password=sa_123456;Initial Catalog=OA;" />
+    <add name="PaGame" connectionString="Data Source=192.168.18.247,50886;User ID=sa;Password=sa_123456;Initial Catalog=PaGame;" />
+    -->
+  <!--<add name="OA" connectionString="Data Source=.;User ID=yuzuoxiang;Password=yu759974394YU;Initial Catalog=OA;" />-->
+  <!--
+  </connectionStrings>-->
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
