--- a/ORM/CreateModelFile/App.config
+++ b/ORM/CreateModelFile/App.config
@@ -6,21 +6,24 @@
 
   <connectionStrings>
     <add name="OA" connectionString="Data Source=.;User ID=yuzuoxiang;Password=yu759974394YU;Initial Catalog=OA;" />
-    <add name="PaGame" connectionString="data source=47.98.36.39;initial catalog=PaGame;user id=sa253;password=zdt78uhb;" />
-    <add name="LanZhouGameData" connectionString="data source=47.98.36.39;initial catalog=LanZhouGameData;user id=sa253;password=zdt78uhb;" />
-    <add name="PaGameRecharge" connectionString="data source=47.98.36.39;initial catalog=PaGameRecharge;user id=sa253;password=zdt78uhb;" />
-    <add name="QPAccount" connectionString="data source=47.98.36.39;initial catalog=QPAccount;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
-    <add name="QPProp" connectionString="data source=47.98.36.39;initial catalog=QPProp;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
-    <add name="QPGameTotal" connectionString="data source=47.98.36.39;initial catalog=QPGameTotal;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
-    <add name="QPAccountSup" connectionString="data source=47.98.36.39;initial catalog=QPAccountSup;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
-    <add name="QPLogin" connectionString="data source=47.98.36.39;initial catalog=QPLogin;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
+    <add name="PaGame" connectionString="data source=192.168.18.247,50886;User ID=sa;Password=sa_123456;Initial Catalog=PaGame;" />
+    <add name="PaGameLogs" connectionString="data source=192.168.18.247,50886;User ID=sa;Password=sa_123456;Initial Catalog=PaGameLogs;" />
+    <add name="LanZhouGameData" connectionString="data source=192.168.18.247,50886;User ID=sa;Password=sa_123456;Initial Catalog=LanZhouGameData;" />
+    <add name="PaGameRecharge" connectionString="data source=192.168.18.247,50886;User ID=sa;Password=sa_123456;Initial Catalog=PaGameRecharge;" />
+    <add name="QPAccount" connectionString="data source=192.168.18.190;initial catalog=QPAccount;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
+    <add name="QPProp" connectionString="data source=192.168.18.190;initial catalog=QPProp;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
+    <add name="QPGameTotal" connectionString="data source=192.168.18.190;initial catalog=QPGameTotal;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
+    <add name="QPAccountSup" connectionString="data source=192.168.18.190;initial catalog=QPAccountSup;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
+    <add name="QPLogin" connectionString="data source=192.168.18.190;initial catalog=QPLogin;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
+    <add name="QPBaoming" connectionString="data source=192.168.18.190;initial catalog=QPBaoming;user id=sa253;Password=zdt78uhb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!--默认导出路径-->
     <add key="path" value="C:\Users\Administrator\Desktop\Model" />
     <!--默认命名空间-->
     <add key="nameSpace" value="Models" />
-    
+
+    <!--<add key="IsDebug" value="Ture"/>-->
     <add key="LogLevel" value="3" />
   </appSettings>
   <runtime>
